fix: h1 text alignment centered

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ button {
   > h1 {
     font-size: 5.4rem;
     letter-spacing: 1rem;
+    text-align: center;
   }
 }
 
